# NyanthuGameProject

./: .gitignore  CMakeLists.txt  README.md  detail.md  test_load.cpp
app/: CMakeLists.txt
app/src/: application.cpp  application.h  main.cpp
data/mod/: default.lua
data/setting/: setting.json
engine/: CMakeLists.txt
engine/engine/include/nyanchu/: audio.h  camera.h  engine.h  input.h  mesh.h  renderer.h  renderer_metal.h  renderer_opengl.h
engine/engine/src/: audio_miniaudio.cpp  camera.cpp  engine.cpp  input.cpp  mesh.cpp  renderer_metal.mm  renderer_opengl.cpp
engine/engine/src/platform/: platform_utils.h  platform_utils_macos.mm
launcher/: CmakeLists.txt  main.cpp
launcher/src/: WindowManager.cpp  WindowManager.h  main.cpp
setter/: CmakeLists.txt  main.cpp
